# poker-bot

./: .gitignore  CMakeLists.txt  LICENSE  README.md
images/: crop-size.md
includes/: Application.hpp  Game.hpp  ImageVisitor.hpp  ScreenShot.hpp  utils.hpp
includes/AbstractClasses/: AbstractVisitable.hpp  AbstractVisitor.hpp
includes/BaseClasses/: BaseImage.hpp  BaseImageCompare.hpp  BaseImageFindNumber.hpp  BaseMouse.hpp
includes/Buttons/: Bet.hpp  Call.hpp  Fold.hpp  RaiseButton.hpp
includes/PlayerItens/: Dealer.hpp  PlayerStatus.hpp  Stack.hpp
includes/TableItens/: Card.hpp  CommunityCards.hpp  Player.hpp  Pot.hpp  Table.hpp
src/: Application.cpp  Game.cpp  ImageVisitor.cpp  ScreenShot.cpp  minecraft-2.3.cpp  poker-bot.cpp  utils.cpp
src/BaseClasses/: BaseImage.cpp  BaseImageCompare.cpp  BaseImageFindNumber.cpp  BaseMouse.cpp
src/Buttons/: Bet.cpp  Call.cpp  Fold.cpp  RaiseButton.cpp
src/PlayerItens/: Dealer.cpp  PlayerStatus.cpp  Stack.cpp
src/TableItens/: Card.cpp  CommunityCards.cpp  Player.cpp  Pot.cpp  Table.cpp
